--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.2",
+    "astro": "^4.15.6",
+    "axios": "^1.7.7",
     "typescript": "^5.5.4"
   }
 }
