--- a/package.json
+++ b/package.json
@@ -11,8 +11,20 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.2",
+    "@astrojs/react": "^3.6.2",
+    "@nextui-org/radio": "^2.1.5",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.15.6",
     "axios": "^1.7.7",
+    "framer-motion": "^11.5.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.5.4"
   }
 }
