--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "astro": "^4.16.2",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.6",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
