--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^5.4.1",
     "axios": "^1.7.7",
+    "country-state-city": "^3.2.1",
     "framer-motion": "^11.5.6",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
