--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/node": "^9.2.2",
     "@astrojs/react": "^4.2.1",
     "@nextui-org/radio": "^2.1.5",
     "@nextui-org/react": "^2.4.8",
