--- a/package.json
+++ b/package.json
@@ -5,31 +5,31 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/node": "^9.2.2",
-    "@astrojs/react": "^4.2.1",
-    "@nextui-org/radio": "^2.1.5",
-    "@nextui-org/react": "^2.4.8",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/theme": "^2.2.11",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "astro": "^5.4.1",
-    "axios": "^1.7.7",
+    "@astrojs/node": "^9.4.2",
+    "@astrojs/react": "^4.3.0",
+    "@nextui-org/radio": "^2.3.8",
+    "@nextui-org/react": "^2.6.11",
+    "@nextui-org/system": "^2.4.6",
+    "@nextui-org/theme": "^2.4.5",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "astro": "^5.13.2",
+    "axios": "^1.11.0",
     "country-state-city": "^3.2.1",
-    "framer-motion": "^11.5.6",
+    "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sonner": "^1.7.1",
-    "styled-components": "^6.1.13",
-    "tailwindcss": "^3.4.12",
-    "typescript": "^5.6.2"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
+    "styled-components": "^6.1.19",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2"
   }
 }
