chore: update package dependencies from @nextui-org to @heroui

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/node": "^9.4.2",
     "@astrojs/react": "^4.3.0",
-    "@nextui-org/radio": "^2.3.8",
-    "@nextui-org/react": "^2.6.11",
-    "@nextui-org/system": "^2.4.6",
-    "@nextui-org/theme": "^2.4.5",
+    "@heroui/radio": "^2.3.8",
+    "@heroui/react": "^2.6.11",
+    "@heroui/system": "^2.4.6",
+    "@heroui/theme": "^2.4.5",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.13.2",
